# forsetti-agentic-edition

./: ACCOUNTABILITY_POLICY.md  AGENTS.md  AI_ASSISTANCE_POLICY.md  CHANGE_CONTROL_POLICY.md  CODE_OF_DELIVERY.md  COMPLIANCE_POLICY.md  CONTRIBUTING.md  DOCUMENTATION_POLICY.md  FORSETTI_CONSTITUTION.md  LICENSE.md  README.md  RELEASE_POLICY.md  VISION.md
.github/: CODEOWNERS  pull_request_template.md
agents/: architect.md  builder.md  docs-manager.md  release-manager.md  validator.md
bundle/: product-manifest.json
changelog/: CHANGELOG.md  release-notes-template.md
contracts/: FAE-BUG-2026-05-08-001-validator-root.md  FAE-GOV-2026-05-08-004-docs-sync-rules-drift.md  FAE-GOV-2026-05-08-005-canonical-policy-registry.md  FAE-GOV-2026-05-10-007-task-contract-scope-approval-evidence-enforcement.md  FAE-GOV-2026-05-10-008-policy-paths-docs-release-accuracy.md  FAE-GOV-2026-05-11-009-adapter-workflow-boundary-protection.md  FAE-GOV-2026-05-11-012-accountability-no-attribution.md  FAE-GOV-2026-05-11-012-ai-assistance-accountability.md  FAE-GOV-2026-06-19-001-wiki-visual-system.md  FAE-META-2026-05-08-003-remediation-evidence-normalization.md  FAE-TASK-2026-05-08-002-portable-core-scaffold.md  bugfix-contract-template.md  (+8 more)
products/windows/: CMakeLists.txt
products/windows/include/ForsettiGovernance/: BundleVerifier.hpp  Contracts.hpp  Result.hpp  SHA256.hpp
products/windows/src/CLI/: main.cpp
products/windows/src/Core/: BundleVerifier.cpp  Result.cpp  SHA256.cpp
products/windows/src/Windows/: WindowsFileSystem.hpp
products/windows/tests/: result_tests.cpp
(+248 files in other folders)
